--- a/arabic.html
+++ b/arabic.html
@@ -684,27 +684,27 @@
 
         <div class="gallery-slider swiper">
           <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/gallery/gallery-1.jpg"><img src="assets/img/gallery/gallery-1.jpg" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/gallery/gallery-2.jpg"><img src="assets/img/gallery/gallery-2.jpg" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/gallery/gallery-3.jpg"><img src="assets/img/gallery/gallery-3.jpg" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/gallery/gallery-4.jpg"><img src="assets/img/gallery/gallery-4.jpg" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/gallery/gallery-5.jpg"><img src="assets/img/gallery/gallery-5.jpg" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/gallery/gallery-6.jpg"><img src="assets/img/gallery/gallery-6.jpg" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/gallery/gallery-7.jpg"><img src="assets/img/gallery/gallery-7.jpg" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/gallery/gallery-8.jpg"><img src="assets/img/gallery/gallery-8.jpg" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/Colored/P1940641.JPG"><img src="assets/img/Colored/P1940641.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/Colored/P1940647.JPG"><img src="assets/img/Colored/P1940647.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/Colored/P1940654.JPG"><img src="assets/img/Colored/P1940654.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/Colored/P1940657.JPG"><img src="assets/img/Colored/P1940657.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/Colored/P1940666.JPG"><img src="assets/img/Colored/P1940666.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/Colored/P1940706.JPG"><img src="assets/img/Colored/P1940706.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/Colored/P1940743.JPG"><img src="assets/img/Colored/P1940743.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/Colored/P1940757.JPG"><img src="assets/img/Colored/P1940757.JPG" class="img-fluid" alt=""></a></div>
           </div>
         </div>
 
         <div class="gallery-slider swiper">
           <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/gallery/gallery-1.jpg" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/gallery/gallery-2.jpg" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/gallery/gallery-3.jpg" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/gallery/gallery-4.jpg" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/gallery/gallery-5.jpg" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/gallery/gallery-6.jpg" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/gallery/gallery-7.jpg" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/gallery/gallery-8.jpg" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="https://www.instagram.com/reel/CjPgRQCK_Qi/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940641.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940647.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940654.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940657.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940666.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940706.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940743.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940757.JPG" class="img-fluid" alt=""></a></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
