--- a/arabic.html
+++ b/arabic.html
@@ -697,14 +697,13 @@
 
         <div class="gallery-slider swiper">
           <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><a href="https://www.instagram.com/reel/CjPgRQCK_Qi/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940641.JPG" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940647.JPG" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940654.JPG" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940657.JPG" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940666.JPG" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940706.JPG" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940743.JPG" class="img-fluid" alt=""></a></div>
-            <div class="swiper-slide"><a href="https://youtu.be/0CFLTrPvwFY?si=4z1wtj7_eGufH3RL" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940757.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/video/document_5938351624605930337.mp4" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940641.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/video/document_5938351624605930338.mp4" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940647.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/video/document_5938351624605930339.mp4" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940654.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/video/document_5938351624605930340.mp4" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940657.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/video/document_5938351624605930342.mp4" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940666.JPG" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/video/document_5938523827024696487.mp4" class="glightbox pulsating-play-btn"></a><img src="assets/img/Colored/P1940666.JPG" class="img-fluid" alt=""></a></div>
+           
           </div>
           <div class="swiper-pagination"></div>
         </div>
