--- a/arabic.html
+++ b/arabic.html
@@ -28,6 +28,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/arabic.css" rel="stylesheet">
@@ -37,7 +38,24 @@
 
 <body>
 
-  
+   <!-- ======= Top Bar ======= -->
+   <section id="topbar" class="d-flex align-items-center">
+    <div class="container d-flex justify-content-center justify-content-md-between">
+      <div class="contact-info d-flex align-items-center">
+       
+        <img src="assets/img/united-states-of-america.png" class=" d-flex align-items-center ms-2" height="20px" alt=""><a href="index.html" style="color: white; text-decoration: underline;">English</a></i>
+
+        <!-- <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">alshaar211@gmail.com</a></i> -->
+      </div>
+      <div class="social-links d-none d-md-flex align-items-center">
+        <a href="#" class="twitter"><i class="fa-brands fa-x-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+      </div>
+    </div>
+  </section>
+
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
@@ -78,7 +96,7 @@
           <p class="s1" data-aos="fade-up">
             نحن سعداء بترحيبك الحار بك عند انضمامك إلى مجتمعنا الطبي الموثوق لتلبية احتياجاتك الصحية.
           </p>
-          <a href="index.html" class="sh1" data-aos="fade-down">اللغة الانجليزية</a>
+          <a href="#gallery" class="sh1" data-aos="fade-down">معرض الصور</a>
           <a href="#department" class="sh2" data-aos="fade-down">الاقسام</a>
         </div>
 
@@ -88,7 +106,7 @@
           <p class="s1" data-aos="fade-up">
             نحن سعداء بترحيبك الحار بك عند انضمامك إلى مجتمعنا الطبي الموثوق لتلبية احتياجاتك الصحية.
           </p>
-          <a href="index.html" class="sh1" data-aos="fade-down">اللغة الانجليزية</a>
+          <a href="#gallery" class="sh1" data-aos="fade-down">معرض الصور</a>
           <a href="#department" class="sh2" data-aos="fade-down">الاقسام</a>
         </div>
 
@@ -98,7 +116,7 @@
           <p class="s1" data-aos="fade-up">
             نحن سعداء بترحيبك الحار بك عند انضمامك إلى مجتمعنا الطبي الموثوق لتلبية احتياجاتك الصحية.
           </p>
-          <a href="index.html" class="sh1" data-aos="fade-down">اللغة الانجليزية</a>
+          <a href="#gallery" class="sh1" data-aos="fade-down">معرض الصور</a>
           <a href="#department" class="sh2" data-aos="fade-down">الاقسام</a>
         </div>
 
