--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
@@ -34,6 +34,21 @@
 <body>
 
   
+<!-- ======= Top Bar ======= -->
+<section id="topbar" class="d-flex align-items-center">
+  <div class="container d-flex justify-content-center justify-content-md-between">
+    <div class="contact-info d-flex align-items-center">
+      <img src="assets/img/flag.png" class=" d-flex align-items-center ms-4" height="20px" alt=""><a href="arabic.html" style="color: white; text-decoration: underline;">Arabic</a></i>
+
+    </div>
+    <div class="social-links d-none d-md-flex align-items-center">
+      <a href="#" class="twitter"><i class="fa-brands fa-x-twitter"></i></a>
+      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+    </div>
+  </div>
+</section>
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
@@ -75,7 +90,7 @@
             We are delighted to extend a warm welcome to you as you join
              our trusted medical community for your healthcare needs
           </p>
-          <a href="arabic.html" class="sh1" data-aos="fade-down">اللغة العربية</a>
+          <a href="#gallery" class="sh1" data-aos="fade-down">gallery</a>
           <a href="#department" class="sh2" data-aos="fade-down">Departments</a>
         </div>
 
@@ -86,7 +101,7 @@
             We are delighted to extend a warm welcome to you as you join
              our trusted medical community for your healthcare needs
           </p>
-            <a href="arabic.html" class="sh1" data-aos="fade-down">اللغة العربية</a>         
+          <a href="#gallery" class="sh1" data-aos="fade-down">gallery</a>       
           <a href="#department" class="sh2" data-aos="fade-down">Departments</a>
         </div>
 
@@ -97,7 +112,7 @@
             We are delighted to extend a warm welcome to you as you join
              our trusted medical community for your healthcare needs
           </p>
-          <a href="arabic.html" class="sh1" data-aos="fade-down">اللغة العربية</a>         
+          <a href="#gallery" class="sh1" data-aos="fade-down">gallery</a>      
           <a href="#department" class="sh2" data-aos="fade-down">Departments</a>
         </div>
 
